deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-blockchain
  labels:
    app: my-blockchain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-blockchain
  template:
    metadata:
      labels:
        app: my-blockchain
    spec:
      containers:
      - name: my-blockchain
        image: gruyaume/my-blockchain:1.0.0
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
