deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-blockchain
  namespace: dev1
spec:
  selector:
    app: my-blockchain
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
